exercise1/Thin/OMP_scalability/slurm-14609.out
mpicc -O3 -fopenmp -march=native -g -Iinclude -DTIME -c main.c
main.c: In function ‘main’:
main.c:166:46: error: lvalue required as unary ‘&’ operand
  166 |       read_pgm_image((void **)&playground_s, &MAXVAL, &k, &k, fname);
      |                                              ^
main.c:227:1: error: expected declaration or statement at end of input
  227 | }
      | ^
make: *** [Makefile:17: main.o] Error 1
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       epyc002
Executable: main.x
--------------------------------------------------------------------------
2 total processes failed to start
/var/spool/slurm/d/job14609/slurm_script: line 47: syntax error: unexpected end of file
